--- a/TOC/19_26/0.html
+++ b/TOC/19_26/0.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Weekly ShonenJump #26 2019 posting order & comments from the author." />
-<meta name="twitter:image" content="img/top.jpg" />
+<meta name="twitter:image" content="https://manganimy.github.io/TOC/19_26/img/top.jpg" />
 	
 <meta charset="UTF-8">
 <title>Table of contents</title>
