--- a/TOC/index.html
+++ b/TOC/index.html
@@ -1,3 +1,5 @@
 <h1>1</h1>
-<h1>2</h1>
-<a href="19_27/">WSJ #27 2019</a>
+<h1>Weekly Shonen Jump #27 2019</h1>
+<a href="19_27/">
+  <img src="19_27/img/top.jpg">
+</a>
