--- a/TOC/index.html
+++ b/TOC/index.html
@@ -1,5 +1,6 @@
 <h1>1</h1>
 <h1>Weekly Shonen Jump #27 2019</h1>
 <a href="19_27/">
-  <img src="19_27/img/top.jpg">
+  <img src="19_27/img/top.jpg"
+       style="width:100%">
 </a>
