--- a/TOC/index.html
+++ b/TOC/index.html
@@ -1,69 +1,79 @@
+<head>
+<style>
+img { 
+  width: 100%;
+  max-width: 720px;
+}
+</style>
+</head>
+<body>
 <h1>1</h1>
 <h1>Weekly Shonen Jump #10 2019</h1>
 <a href="19_10/">
-  <img src="19_10/img/top.jpg" style="width:100%">
+  <img src="19_10/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #11 2019</h1>
 <a href="19_11/">
-  <img src="19_11/img/top.jpg" style="width:100%">
+  <img src="19_11/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #12 2019</h1>
 <a href="19_12/">
-  <img src="19_12/img/top.jpg" style="width:100%">
+  <img src="19_12/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #13 2019</h1>
 <a href="19_13/">
-  <img src="19_13/img/top.jpg" style="width:100%">
+  <img src="19_13/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #14 2019</h1>
 <a href="19_14/">
-  <img src="19_14/img/top.jpg" style="width:100%">
+  <img src="19_14/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #15 2019</h1>
 <a href="19_15/">
-  <img src="19_15/img/top.jpg" style="width:100%">
+  <img src="19_15/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #16 2019</h1>
 <a href="19_16/">
-  <img src="19_16/img/top.jpg" style="width:100%">
+  <img src="19_16/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #17 2019</h1>
 <a href="19_17/">
-  <img src="19_17/img/top.jpg" style="width:100%">
+  <img src="19_17/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #18 2019</h1>
 <a href="19_18/">
-  <img src="19_18/img/top.jpg" style="width:100%">
+  <img src="19_18/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #19 2019</h1>
 <a href="19_19/">
-  <img src="19_19/img/top.jpg" style="width:100%">
+  <img src="19_19/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #20 2019</h1>
 <a href="19_20/">
-  <img src="19_20/img/top.jpg" style="width:100%">
+  <img src="19_20/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #21 2019</h1>
 <a href="19_21/">
-  <img src="19_21/img/top.jpg" style="width:100%">
+  <img src="19_21/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #22・23 2019</h1>
 <a href="19_2223/">
-  <img src="19_2223/img/top.jpg" style="width:100%">
+  <img src="19_2223/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #24 2019</h1>
 <a href="19_24/">
-  <img src="19_24/img/top.jpg" style="width:100%">
+  <img src="19_24/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #25 2019</h1>
 <a href="19_25/">
-  <img src="19_25/img/top.jpg" style="width:100%">
+  <img src="19_25/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #26 2019</h1>
 <a href="19_26/">
-  <img src="19_26/img/top.jpg" style="width:100%">
+  <img src="19_26/img/top.jpg">
 </a>
 <h1>Weekly Shonen Jump #27 2019</h1>
 <a href="19_27/">
-  <img src="19_27/img/top.jpg" style="width:100%">
+  <img src="19_27/img/top.jpg">
 </a>
+</body>
