--- a/TOC/index.html
+++ b/TOC/index.html
@@ -1,12 +1,17 @@
 <head>
 <style>
+ .content {
+  max-width: 500px;
+  margin: auto;
+} 
 img { 
   width: 100%;
-  max-width: 720px;
+  max-width: 960px;
 }
 </style>
 </head>
 <body>
+  <div class="content">
 <h1>1</h1>
 <h1>Weekly Shonen Jump #10 2019</h1>
 <a href="19_10/">
@@ -76,4 +81,5 @@ img {
 <a href="19_27/">
   <img src="19_27/img/top.jpg">
 </a>
+  </div>
 </body>
