--- a/TOC/index.html
+++ b/TOC/index.html
@@ -1,5 +1,9 @@
 <head>
 <style>
+ body {
+  background: black;
+  color: white;
+ }
  .content {
   max-width: 1000px;
   margin: auto;
@@ -12,7 +16,7 @@ img {
 </head>
 <body>
   <div class="content">
-<h1>1</h1>
+<img src="img/logo.svg">
 <h1>Weekly Shonen Jump #10 2019</h1>
 <a href="19_10/">
   <img src="19_10/img/top.jpg">
