--- a/TOC/index.html
+++ b/TOC/index.html
@@ -16,7 +16,7 @@ img {
 </head>
 <body>
   <div class="content">
-<img src="img/logo.svg" style="width:720px">
+<img src="img/logo.svg" style="width:720px" class="center">
 <h1>Weekly Shonen Jump #10 2019</h1>
 <a href="19_10/">
   <img src="19_10/img/top.jpg">
