--- a/TOC/index.html
+++ b/TOC/index.html
@@ -4,6 +4,12 @@
   background: black;
   color: white;
  }
+  .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  }
  .content {
   max-width: 1000px;
   margin: auto;
