--- a/TOC/index.html
+++ b/TOC/index.html
@@ -85,7 +85,7 @@ img {
 </a>
 <h1>Weekly Shonen Jump #26 2019</h1>
 <a href="19_26/">
-  <img src="img/19_26">
+  <img src="img/19_26.jpg">
 </a>
 <h1>Weekly Shonen Jump #27 2019</h1>
 <a href="19_27/">
