--- a/TOC/19_11/index.html
+++ b/TOC/19_11/index.html
@@ -27,7 +27,7 @@
 				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Taishi Tsutsui</p>
-					I'm so thankful for all the fan-letters that give me energy! I'm sorry that I don't have time to respond…
+					I'm so thankful for all the fan-letters that give me energy! I'm sorry that I don't have time to respondâ€¦
 				</div>
 			</div>
 		</div>
@@ -219,7 +219,7 @@
 				<div class="l_side"><img src="img/img_hayashi.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Seiji Hayashi</p>
-					My editor seems to love the band “OGRE YOU ASSHOLE” from Nagano.
+					My editor seems to love the band "OGRE YOU ASSHOLE" from Nagano.
 				</div>
 			</div>
 		</div>
