--- a/TOC/index.html
+++ b/TOC/index.html
@@ -23,7 +23,7 @@ img {
 </head>
 <body>
   <div class="content">
-<img src="img/logo.svg" style="width:720px" class="center">
+<img src="img/logo.svg" style="width:70%" class="center">
 <h1>Weekly Shounen Jump Table of Contents & Author Comments</h1>
    
 <h2>Weekly Shonen Jump #10 2019<a href="19_10/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
