--- a/TOC/index.html
+++ b/TOC/index.html
@@ -1,4 +1,5 @@
 <head>
+ <title>Weekly Shonen Jump TOC Hub</title>
 <style>
  body {
   background: black;
@@ -26,7 +27,7 @@ img {
 <img src="img/logo.svg" style="width:75%" class="center">
 <h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
    
-<h2>Weekly Shonen Jump #10 2019<a href="19_10/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2>Weekly Shonen Jump #10 2019<a href="19_10/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7rem"></a></h2>
 <a href="19_10/">
   <img src="img/19_10.jpg">
 </a>
