--- a/TOC/index.html
+++ b/TOC/index.html
@@ -20,6 +20,8 @@ img {
   width: 100%;
   max-width: 1000px;
 }
+ h1 {
+  border-bottom: 4px solid white;
 </style>
 </head>
 <body>
@@ -27,7 +29,7 @@ img {
 <img src="img/logo.svg" style="width:75%" class="center">
 <h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
    
-<h2>Weekly Shonen Jump #10 2019<a href="19_10/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7rem"></a></h2>
+<h2>Weekly Shonen Jump #10 2019<a href="19_10/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_10/">
   <img src="img/19_10.jpg">
 </a>
