--- a/TOC/19_10/index.html
+++ b/TOC/19_10/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>WJ10comments</title>
+<title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="description" content="Table of contents">
 <meta name="Keywords" content="Table of contents">
@@ -148,7 +148,7 @@
 				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Taishi Tsutsui</p>
-					I was messing around and touching the ceiling fan when my daughter got mad and said, “that's dangerous!” They grow up so fast…
+					I was messing around and touching the ceiling fan when my daughter got mad and said, â€œthat's dangerous!â€ They grow up so fastâ€¦
 				</div>
 			</div>
 		</div>
