--- a/TOC/index.html
+++ b/TOC/index.html
@@ -21,7 +21,7 @@ img {
   max-width: 1000px;
 }
  h1 {
-  border-bottom: 4px solid white;
+  border-bottom: 3px solid yellow;
 </style>
 </head>
 <body>
