--- a/TOC/index.html
+++ b/TOC/index.html
@@ -22,6 +22,21 @@ img {
 }
  h1 {
   border-bottom: 3px solid yellow;
+  h2 a {
+	color: #fff;
+}
+h2 a:link {
+	color: #fff;
+}
+h2 a:visited {
+	color: #fff;
+}
+h2 a:hover {
+	color: #ffe404;
+}
+h2 a:active {
+	color: #fff;
+}
 </style>
 </head>
 <body>
@@ -29,75 +44,75 @@ img {
 <img src="img/logo.svg" style="width:75%" class="center">
 <h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
    
-<h2>Weekly Shonen Jump #10 2019<a href="19_10/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_10/">Weekly Shonen Jump #10 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_10/">
   <img src="img/19_10.jpg">
 </a>
-<h2>Weekly Shonen Jump #11 2019<a href="19_11/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_11/">Weekly Shonen Jump #11 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_11/">
   <img src="img/19_11.jpg">
 </a>
-<h2>Weekly Shonen Jump #12 2019<a href="19_12/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_12/">Weekly Shonen Jump #12 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_12/">
   <img src="img/19_12.jpg">
 </a>
-<h2>Weekly Shonen Jump #13 2019<a href="19_13/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_13/">Weekly Shonen Jump #13 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_13/">
   <img src="img/19_13.jpg">
 </a>
-<h2>Weekly Shonen Jump #14 2019<a href="19_14/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_14/">Weekly Shonen Jump #14 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_14/">
   <img src="img/19_14.jpg">
 </a>
-<h2>Weekly Shonen Jump #15 2019<a href="19_15/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_15/">Weekly Shonen Jump #15 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_15/">
   <img src="img/19_15.jpg">
 </a>
-<h2>Weekly Shonen Jump #16 2019<a href="19_16/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_16/">Weekly Shonen Jump #16 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_16/">
   <img src="img/19_16.jpg">
 </a>
-<h2>Weekly Shonen Jump #17 2019<a href="19_17/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_17/">Weekly Shonen Jump #17 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_17/">
   <img src="img/19_17.jpg">
 </a>
-<h2>Weekly Shonen Jump #18 2019<a href="19_18/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_18/">Weekly Shonen Jump #18 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_18/">
   <img src="img/19_18.jpg">
 </a>
-<h2>Weekly Shonen Jump #19 2019<a href="19_19/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_19/">Weekly Shonen Jump #19 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_19/">
   <img src="img/19_19.jpg">
 </a>
-<h2>Weekly Shonen Jump #20 2019<a href="19_20/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_20/">Weekly Shonen Jump #20 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_20/">
   <img src="img/19_20.jpg">
 </a>
-<h2>Weekly Shonen Jump #21 2019<a href="19_21/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_21/">Weekly Shonen Jump #21 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_21/">
   <img src="img/19_21.jpg">
 </a>
-<h2>Weekly Shonen Jump #22・23 2019<a href="19_2223/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_2223/">Weekly Shonen Jump #22・23 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_2223/">
   <img src="img/19_2223.jpg">
 </a>
-<h2>Weekly Shonen Jump #24 2019<a href="19_24/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_24/">Weekly Shonen Jump #24 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_24/">
   <img src="img/19_24.jpg">
 </a>
-<h2>Weekly Shonen Jump #25 2019<a href="19_25/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_25/">Weekly Shonen Jump #25 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_25/">
   <img src="img/19_25.jpg">
 </a>
-<h2>Weekly Shonen Jump #26 2019<a href="19_26/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_26/">Weekly Shonen Jump #26 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_26/">
   <img src="img/19_26.jpg">
 </a>
-<h2>Weekly Shonen Jump #27 2019<a href="19_27/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_27/">Weekly Shonen Jump #27 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_27/">
   <img src="img/19_27.jpg">
 </a>
-<h2>Weekly Shonen Jump #28 2019<a href="19_28/"><img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<h2><a href="19_28/">Weekly Shonen Jump #28 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_28/">
   <img src="img/19_28.jpg">
 </a> 
