--- a/TOC/index.html
+++ b/TOC/index.html
@@ -1,4 +1,7 @@
 <head>
+	  <link rel="shortcut icon"
+   type="image/x-icon"
+        href="https://manganimy.github.io/fav.ico">
  <title>Weekly Shonen Jump TOC Hub</title>
 <style>
  body {
