add meta properties

--- a/TOC/index.html
+++ b/TOC/index.html
@@ -2,7 +2,13 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="https://manganimy.github.io/fav.ico">
- <title>Weekly Shonen Jump TOC Hub</title>
+<title>Weekly Shonen Jump TOC Hub</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+<meta property="og:title" content="Weekly Shonen Jump TOC Hub">
+<meta property="og:description" content="Archive of Weekly Shonen Jump Author Comments (with proper formatting)">
+<meta property="og:image" content="img/meta.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/">
+<meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
   background: black;
