--- a/TOC/index.html
+++ b/TOC/index.html
@@ -8,8 +8,7 @@
 <meta property="og:description" content="Archive of Weekly Shonen Jump Author Comments (with proper formatting)">
 <meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
 <meta property="og:url" content="https://manganimy.github.io/TOC/">
-<meta name="twitter:title" content="Weekly Shonen Jump TOC Hub">
-<meta name="twitter:card" content="summary">	
+<meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
   background: black;
