--- a/TOC/index.html
+++ b/TOC/index.html
@@ -128,6 +128,10 @@ h2 a:active {
 <h2><a href="19_28/">Weekly Shonen Jump #28 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_28/">
   <img src="img/19_28.jpg">
-</a> 
+</a>
+<h2><a href="19_29/">Weekly Shonen Jump #29 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
+<a href="19_29/">
+  <img src="img/19_29.jpg">
+</a> 	  
   </div>
 </body>
