--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -1,7 +1,7 @@
 <head>
 	  <link rel="shortcut icon"
    type="image/x-icon"
-        href="https://manganimy.github.io/fav.ico">
+        href="img/fav.ico">
 <title>Weekly Shonen Jump TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta property="og:title" content="Weekly Shonen Jump TOC Hub">
@@ -54,7 +54,7 @@ h2 a:active {
 </head>
 <body>
   <div class="content">
-<img src="img/logo.svg" style="width:75%" class="center">
+<img src="img/logo.png" style="width:75%" class="center">
 <h1>Weekly Shonen Jump Table of Contents & Author Comments</h1>
    
 <h2><a href="19_27/">Weekly Shonen Sunday #27 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
