--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -59,7 +59,7 @@ h2 a:active {
    
 <h2><a href="19_27/">Weekly Shonen Sunday #27 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em"></a></h2>
 <a href="19_27/">
-  <img src="img/19_27.jpg">
+  <img src="19_27/img/img_ss.jpg">
 </a>
   </div>	
 </body>
