--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -15,7 +15,7 @@
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
-		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_wj.jpg" alt=""></div>
+		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt=""></div>
 	</div><!-- end .header -->
 
 	<div class="contents">
