--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -57,9 +57,9 @@ h2 a:active {
 <img src="img/logo.png" style="width:75%" class="center">
 <h1>Weekly Shonen Sunday Table of Contents & Author Comments</h1>
    
-<h2><a href="19_27/">Weekly Shonen Sunday #27 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em" class="center"></a></h2>
+<h2><a href="19_27/">Weekly Shonen Sunday #27 2019<img src="img/next2.png" style="padding:.02em; width:.35em; height:.7em" ></a></h2>
 <a href="19_27/">
-  <img src="19_27/img/img_ss.jpg">
+  <img src="19_27/img/img_ss.jpg" class="center">
 </a>
   </div>	
 </body>
