--- a/wss/TOC/index.html
+++ b/wss/TOC/index.html
@@ -4,10 +4,10 @@
         href="img/fav.ico">
 <title>Weekly Shonen Sunday TOC Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump TOC Hub">
-<meta property="og:description" content="Archive of Weekly Shonen Jump Author Comments (with proper formatting)">
-<meta property="og:image" content="https://manganimy.github.io/TOC/img/meta.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/">
+<meta property="og:title" content="Weekly Shonen Sunday TOC Hub">
+<meta property="og:description" content="Archive of Weekly Shonen Sunday Author Comments">
+<meta property="og:image" content="img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/wss/TOC/">
 <meta name="twitter:card" content="summary_large_image">	
 <style>
  body {
