--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -257,7 +257,7 @@
 
 	</div><!-- end .contents -->
 	<div id="footer">
-		<div class="cooyactxt">&copy; SHUEISHA Inc. All rights reserved.</div>
+		<div class="cooyactxt">&copy; SHOGAKUKAN Inc. All rights reserved.</div>
 	</div><!-- end .footer -->
 </div><!-- end .container -->
 
