--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -1,6 +1,9 @@
 
 <html>
 <head>
+	  <link rel="shortcut icon"
+   type="image/x-icon"
+        href="img/fav.ico">
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
