--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -23,52 +23,45 @@
 
 	<div class="contents">
 
-		<!-- Tokyo Shinobi Squad -->
+		<!-- Souboutei Kowasubeshi -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100062">Tokyo Shinobi Squad <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Souboutei Kowasubeshi <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tanaka.png" alt=""></div>
+				<div class="l_side"><img src="img/sobotei.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Yuki Tanaka</p>
-					Nice to meet you! This is my first serialization. I'm going to create a fun shonen manga. Thanks for the support!
-				</div>
-			</div>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_matsuura.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kento Matsuura</p>
-					Nice to meet you! I'm gonna go crazy on the pages with Jin and his gang! Thanks for the support!
+					<p class="author">Kazuhiro Fujita</p>
+					Oh of course there are! Though there are so many of them that it annoys me to think of them.
 				</div>
 			</div>
 		</div>
 
-		<!-- Demon Slayer: Kimetsu no Yaiba -->
+		<!-- Shinri to Mako-neechan -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100009">Demon Slayer: Kimetsu no Yaiba <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Shinri to Mako-neechan <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_gotouge.png" alt=""></div>
+				<div class="l_side"><img src="img/maikosan.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Koyoharu Gotouge</p>
-					I found it so hilarious that my hiccups wouldn't stop that I laughed a ton. That stopped them.
+					<p class="author">Tamaki Wakaki</p>
+					Wakaki here. It'll soon be summer huh? Please be enchanted by the scene of elementary school students eating ice cream.
 				</div>
 			</div>
 		</div>
 
-		<!-- One Piece -->
+		<!-- Ponkotsu-chan Kenshochuu -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100020">One Piece <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Ponkotsu-chan Kenshochuu <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_oda.png" alt=""></div>
+				<div class="l_side"><img src="img/ponkotsu.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Eiichiro Oda</p>
-					The Aoharu Cup Noodles commercial is awesome! Thank you to everyone involved! Keep it up!
+					<p class="author">Tsubasa Fukuchi</p>
+					When I read the 'Romance Dawn' oneshot, I immediately thought that Oda-sensei was a genius.
 				</div>
 			</div>
 		</div>
 
-		<!-- The Promised Neverland -->
+		<!-- Aozakura Bouei daigakkou Monogatari  -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100026">The Promised Neverland <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Aozakura Bouei daigakkou Monogatari  <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_shirai.png" alt=""></div>
 				<div class="r_side">
@@ -80,7 +73,7 @@
 
 		<!-- Samurai 8: The Tale of Hachimaru -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100059">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_kishimoto.png" alt=""></div>
 				<div class="r_side">
@@ -92,7 +85,7 @@
 
 		<!-- Black Clover -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100003">Black Clover <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Black Clover <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_tabata.png" alt=""></div>
 				<div class="r_side">
@@ -104,7 +97,7 @@
 
 		<!-- Dr. STONE -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100010">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_inagaki.png" alt=""></div>
 				<div class="r_side">
@@ -116,7 +109,7 @@
 
 		<!-- My Hero Academia -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100017">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
 				<div class="r_side">
@@ -128,7 +121,7 @@
 
 		<!-- Beast Children -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100061">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
 				<div class="r_side">
@@ -140,7 +133,7 @@
 
 		<!-- We Never Learn -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100035">We Never Learn <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">We Never Learn <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
 				<div class="r_side">
@@ -152,7 +145,7 @@
 
 		<!-- Jujutsu Kaisen -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100034">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_akutami.png" alt=""></div>
 				<div class="r_side">
@@ -164,7 +157,7 @@
 
 		<!-- Double Taisei -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Double Taisei <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
 				<div class="r_side">
@@ -176,7 +169,7 @@
 
 		<!-- Haikyu!! -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100014">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
 				<div class="r_side">
@@ -188,7 +181,7 @@
 
 		<!-- ACT-AGE -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100036">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_usazaki.png" alt=""></div>
 				<div class="r_side">
@@ -200,7 +193,7 @@
 
 		<!-- Hinomaru Sumo -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100031">Hinomaru Sumo <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Hinomaru Sumo <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_kawada.png" alt=""></div>
 				<div class="r_side">
@@ -212,7 +205,7 @@
 
 		<!-- Chainsaw Man -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100037">Chainsaw Man <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Chainsaw Man <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_fujimoto.png" alt=""></div>
 				<div class="r_side">
@@ -224,7 +217,7 @@
 
 		<!-- Food Wars!: Shokugeki no Soma -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100013">Food Wars!: Shokugeki no Soma <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Food Wars!: Shokugeki no Soma <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_tsukuda.png" alt=""></div>
 				<div class="r_side">
@@ -236,7 +229,7 @@
 
 		<!-- Yui Kamio Lets Loose -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100055">Yui Kamio Lets Loose <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Yui Kamio Lets Loose <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_shiibashi.png" alt=""></div>
 				<div class="r_side">
@@ -248,7 +241,7 @@
 
 		<!-- The Last Saiyuki -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100054">The Last Saiyuki <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">The Last Saiyuki <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_nonoue.png" alt=""></div>
 				<div class="r_side">
