--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -1,10 +1,10 @@
 
 <html>
+<meta charset="UTF-8">	
 <head>
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="img/fav.ico">
-<meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="description" content="Table of contents">
@@ -17,7 +17,7 @@
 <div id="container">
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
-		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
+		<div class="txt_read"><span>This week's weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
 		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt=""></div>
 	</div><!-- end .header -->
 
@@ -63,58 +63,58 @@
 		<div class="comment_area">
 			<h2><a href="#">Aozakura Bouei daigakkou Monogatari  <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_shirai.png" alt=""></div>
+				<div class="l_side"><img src="img/aozakura.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Kaiu Shirai</p>
-					I'm back! I'm probably all better! I'm so sorry! Volume 14 is coming out in Japan! The parody manga is also being released at the same time. Check 'em out!
+					<p class="author">Hikaru Nikaido</p>
+					Makoto Ojiro who I met when I was a youngster.
 				</div>
 			</div>
 		</div>
 
-		<!-- Samurai 8: The Tale of Hachimaru -->
+		<!-- Major 2nd -->
 		<div class="comment_area">
-			<h2><a href="#">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Major 2nd <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_kishimoto.png" alt=""></div>
+				<div class="l_side"><img src="img/major2nd.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Masashi Kishimoto</p>
-					With this serialization I'm just the writer, but the schedule is still tight! Weekly serialization is rough.
+					<p class="author">Takuya Mitsuda</p>
+					Shinichi Hoshi. (TN- A novelist and Sci-fi writer known for writing super short *3-4 pages* science fiction stories.)
 				</div>
 			</div>
 		</div>
 
-		<!-- Black Clover -->
+		<!-- Yuko sae tatakaeba -->
 		<div class="comment_area">
-			<h2><a href="#">Black Clover <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Yuko sae tatakaeba  <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tabata.png" alt=""></div>
+				<div class="l_side"><img src="img/yukosae.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Y&umacr;ki Tabata</p>
-					My life schedule is so messed up that I had my wife frying up karaage in the middle of the night. I felt guilty, but it was delicious!
+					<p class="author">Sei Fukui</p>
+					Tsuda-san of Daian!!
 				</div>
 			</div>
 		</div>
 
-		<!-- Dr. STONE -->
+		<!--Detective Conan: Zero's Tea Time -->
 		<div class="comment_area">
-			<h2><a href="#">Dr. STONE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Detective Conan: Zero's Tea Time <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_inagaki.png" alt=""></div>
+				<div class="l_side"><img src="img/conan_zero.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Riichiro Inagaki</p>
-					I went to watch the anime voice-over recording. Everyone is amazing! Hearing the voices out loud makes even me cry.
+					<p class="author">Takahiro Arai</p>
+					Butt Detective.
 				</div>
 			</div>
 		</div>
 
-		<!-- My Hero Academia -->
+		<!-- MAO -->
 		<div class="comment_area">
-			<h2><a href="#">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">MAO <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
+				<div class="l_side"><img src="img/mao.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Kohei Horikoshi</p>
-					A reader made me a handmade Slidin' Go figure. I laughed out loud at the choice! So happy!
+					<p class="author">Rumiko Takahashi</p>
+					Megumi's conversational abilities.
 				</div>
 			</div>
 		</div>
