--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -17,7 +17,7 @@
 <div id="container">
 	<div class="header">
 		<h1><img src="img/top.jpg" alt=""></h1>
-		<div class="txt_read"><span>This week's weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
+		<div class="txt_read"><span>This week's Weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
 		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt=""></div>
 	</div><!-- end .header -->
 
@@ -37,9 +37,9 @@
 
 		<!-- Shinri to Mako-neechan -->
 		<div class="comment_area">
-			<h2><a href="#">Shinri to Mako-neechan <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Shinri to Mako-neechan(OneShot) <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/maikosan.png" alt=""></div>
+				<div class="l_side"><img src="img/shinri.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Tamaki Wakaki</p>
 					Wakaki here. It'll soon be summer huh? Please be enchanted by the scene of elementary school students eating ice cream.
@@ -119,98 +119,98 @@
 			</div>
 		</div>
 
-		<!-- Beast Children -->
+		<!-- Amano Megumi wa suki darake! -->
 		<div class="comment_area">
-			<h2><a href="#">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Amano Megumi wa suki darake! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
+				<div class="l_side"><img src="img/amano.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Kento Terasaka</p>
-					The joy of being able to eat sweet stuff every day. I love souffl&eacute; roll cakes! The ones that come with six pieces that are mostly cream.
+					<p class="author">Nekoguchi</p>
+					I think people who can draw short manga on twitter while also having a serial at the same time are geniuses..
 				</div>
 			</div>
 		</div>
 
-		<!-- We Never Learn -->
+		<!-- switch -->
 		<div class="comment_area">
-			<h2><a href="#">We Never Learn <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">SWITCH <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
+				<div class="l_side"><img src="img/switch.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Taishi Tsutsui</p>
-					Zelda on Switch is super fun! But it's such a big game that I don't feel like I'll ever finish it…
+					<p class="author">Atsushi Namikiri</p>
+					I feel that way when I watch those who can trace and draw serious sword fights from photos. 
 				</div>
 			</div>
 		</div>
 
-		<!-- Jujutsu Kaisen -->
+		<!-- Komi-san wa komyusho desu -->
 		<div class="comment_area">
-			<h2><a href="#">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Komi-san wa komyusho desu <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_akutami.png" alt=""></div>
+				<div class="l_side"><img src="img/komisan.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Gege Akutami</p>
-					I've been saying that Tsumiki's hair is like a kuwagata beetle.
+					<p class="author">Tomohito Oda</p>
+					Ryouko Kui! (TN- Author of Delicious in dungeon.)
 				</div>
 			</div>
 		</div>
 
-		<!-- Double Taisei -->
+		<!-- Kimi wa 008 -->
 		<div class="comment_area">
-			<h2><a href="#">Double Taisei <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Kimi wa 008 <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
+				<div class="l_side"><img src="img/kimiha008.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Kentaro Fukuda</p>
-					There was a mistake on one of the shogi terms in chapter 2. G-82 was supposed to be S-12+. I'm so sorry!
+					<p class="author">Syun Matsuena</p>
+					There are so many....most of them I met while in my high school days.
 				</div>
 			</div>
 		</div>
 
-		<!-- Haikyu!! -->
+		<!-- Maiko-san chi no Makanai-san -->
 		<div class="comment_area">
-			<h2><a href="#">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Maiko-san chi no Makanai-san <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
+				<div class="l_side"><img src="img/maikosan.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Haruichi Furudate</p>
-					Lately I've been enjoying drinking whisky and watching the Paranormal Activity movies.
+					<p class="author">Aiko Koyama</p>
+					Kaoru Mori (Author of "A Bride's story")
 				</div>
 			</div>
 		</div>
 
-		<!-- ACT-AGE -->
+		<!-- Be Blues!  -->
 		<div class="comment_area">
-			<h2><a href="#">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Be Blues!  <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_usazaki.png" alt=""></div>
+				<div class="l_side"><img src="img/beblues.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Shiro Usazaki</p>
-					Congratulations on your serialization, Matsuura-san! Let's take care of our health and do our best!
+					<p class="author">Motoyuki Tanaka</p>
+					The lyricist Takashi Matsumoto. (Who has written over 2,100 songs --130 of which have been the 10 ten in the oricon charts.)
 				</div>
 			</div>
 		</div>
 
-		<!-- Hinomaru Sumo -->
+		<!-- Sokyuu no Ariadne -->
 		<div class="comment_area">
-			<h2><a href="#">Hinomaru Sumo <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Sokyuu no Ariadne <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_kawada.png" alt=""></div>
+				<div class="l_side"><img src="img/ariadne.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Kawada</p>
-					I tried to attend a nursery school event but all of the other dads avoided me...
+					<p class="author">Nobuhiro Yagi</p>
+					Man*Gatarou, Kousuke Masuta and Tobira Oda (TN- All three of them are gag manga authors.)
 				</div>
 			</div>
 		</div>
 
-		<!-- Chainsaw Man -->
+		<!-- Tonikaku Cawaii  -->
 		<div class="comment_area">
-			<h2><a href="#">Chainsaw Man <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Tonikaku Cawaii  <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_fujimoto.png" alt=""></div>
+				<div class="l_side"><img src="img/tonikaku.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Tatsuki Fujimoto</p>
-					The baumkuchen cake from Nenrinya is really good. I want to eat a bunch!
+					<p class="author">Kenjiro Hata</p>
+					Wakaki (Tamaki) and Tanabe (Yellow) I guess...
 				</div>
 			</div>
 		</div>
