--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -215,42 +215,149 @@
 			</div>
 		</div>
 
-		<!-- Food Wars!: Shokugeki no Soma -->
+		<!-- Anonatsu 1959 -->
 		<div class="comment_area">
-			<h2><a href="#">Food Wars!: Shokugeki no Soma <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Anonatsu 1959<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_tsukuda.png" alt=""></div>
+				<div class="l_side"><img src="img/img_anonatsu.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Yuto Tsukuda</p>
-					Oraaaaaa! I'm putting everything I have into creating these chapters!
+					<p class="author">Ashibi Fukui</p>
+					Ayumi Ishii (TN- Author of Nobunaga Concerto in Gessan.)
 				</div>
 			</div>
 		</div>
 
-		<!-- Yui Kamio Lets Loose -->
+		<!-- Undine ha Kyou mo Koi wo suru ka? -->
 		<div class="comment_area">
-			<h2><a href="#">Yui Kamio Lets Loose <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Undine ha Kyou mo Koi wo suru ka? <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_shiibashi.png" alt=""></div>
+				<div class="l_side"><img src="img/undine.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Hiroshi Shiibashi</p>
-					I'm not sure how things will go with the time difference, but I'm really looking forward to the FIFA U-20 World Cup!
+					<p class="author">Shinya Misu</p>
+					It's only been recently but the morning drama "Gegege no Nyoubou" has deeply moved me whenever I've sat down for a watch.
 				</div>
 			</div>
 		</div>
 
-		<!-- The Last Saiyuki -->
+		<!-- Daiku no Hato -->
 		<div class="comment_area">
-			<h2><a href="#">The Last Saiyuki <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_nonoue.png" alt=""></div>
+				<div class="l_side"><img src="img/dai9nohato.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Daijiro Nonoue</p>
-					Why do bottles of cola taste so darn delicious?
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
 				</div>
 			</div>
 		</div>
 
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/maojo.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
+		
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/firerabbit.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
+		
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/ryoko.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
+		
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/tanteixeno.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
+		
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/hoankan.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
+		
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/chronomugen.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
+		
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/5fungo.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
+		
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/yokaigiga.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
+		
+		<!-- Daiku no Hato -->
+		<div class="comment_area">
+			<h2><a href="#">Daiku no Hato <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/tokatihitori.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Michiteru Kusaba</p>
+					Tamori (TN - A Japanese comedian/host.)
+				</div>
+			</div>
+		</div>
 	</div><!-- end .contents -->
 	<div id="footer">
 		<div class="cooyactxt">&copy; SHOGAKUKAN Inc. All rights reserved.</div>
