--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -19,8 +19,14 @@
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's Weekly Shonen Sunday posting order &amp; comments from the author.</span></div>
 		<div class="img_wj" style="border: 1px solid #414141;"><img src="img/img_ss.jpg" alt=""></div>
+		
 	</div><!-- end .header -->
-
+	<div class class="question_area">
+		<div class="question_l">Question of the week</div>
+		<div class="question_r"><p>Was there anyone where you were like 'This person is a genius' at first glance?"</p>
+		</div>
+	</div>		
+	
 	<div class="contents">
 
 		<!-- Souboutei Kowasubeshi -->
