--- a/wss/TOC/19_27/index.html
+++ b/wss/TOC/19_27/index.html
@@ -22,7 +22,7 @@
 		
 	</div><!-- end .header -->
 	<div class="contents">
-		<div class class="question_area">
+		<div class="question_area">
 			<div class="question_l"><p class="fixed">Question of the week</p></div>
 			<div class="question_r"><p>Was there anyone where you were like 'This person is a genius' at first glance?"</p>
 			</div>
